--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
                       height="33"
                       viewBox="0 0 32 33"
                       fill="none"
+                      class="duration-300"
                     >
                       <path
                         d="M10.6669 22.5773L10.6669 11.3506C10.6663 10.9074 10.7911 10.4731 11.0271 10.0979C11.2631 9.7227 11.6005 9.42201 12.0002 9.23063C12.4746 9.00658 13.0023 8.92029 13.5233 8.98158C14.0442 9.04287 14.5375 9.24928 14.9469 9.57729L21.7469 15.1906C22.0011 15.4109 22.2049 15.6833 22.3446 15.9892C22.4843 16.2952 22.5566 16.6276 22.5566 16.964C22.5566 17.3003 22.4843 17.6327 22.3446 17.9387C22.2049 18.2447 22.0011 18.517 21.7469 18.7373L14.9469 24.3506C14.5375 24.6786 14.0442 24.885 13.5233 24.9463C13.0023 25.0076 12.4746 24.9213 12.0002 24.6973C11.6005 24.5059 11.2631 24.2052 11.0271 23.83C10.7911 23.4548 10.6663 23.0205 10.6669 22.5773Z"
@@ -392,14 +393,14 @@
                   </div>
                   <div class="block__content">
                     <div
-                      class="text-white flex items-center text-md md:text-lg font-bold font-['Segoe UI'] leading-tight"
+                      class="text-white flex items-center text-sm sm:text-md md:text-lg font-bold font-['Segoe UI'] leading-tight"
                     >
                       <div class="bg-white h-2 w-2 mr-3 rounded-full"></div>
                       Set up a Compatible Wallet: You'll need a crypto wallet
                       that supports Arbitrum, like MetaMask or Trust Wallet.<br />
                     </div>
                     <div
-                      class="text-white text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
+                      class="text-white text-sm sm:text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
                     >
                       <div class="bg-white h-2 w-2 mr-3 rounded-full"></div>
                       Fund Your Wallet: Add Ethereum (ETH) to your wallet.
@@ -407,7 +408,7 @@
                       Arbitrum.<br />
                     </div>
                     <div
-                      class="text-white text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
+                      class="text-white text-sm sm:text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
                     >
                       <div class="bg-white h-2 w-2 mr-3 rounded-full"></div>
                       Bridge ETH to Arbitrum: Use a bridging service to convert
@@ -415,14 +416,14 @@
                       found on the official Arbitrum website.<br />
                     </div>
                     <div
-                      class="text-white text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
+                      class="text-white text-sm sm:text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
                     >
                       <div class="bg-white h-2 w-2 mr-3 rounded-full"></div>
                       Connect to a DEX: Go to a DEX that supports Arbitrum, like
                       SushiSwap or Uniswap. Connect your wallet.<br />
                     </div>
                     <div
-                      class="text-white text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
+                      class="text-white text-sm sm:text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
                     >
                       <div class="bg-white h-2 w-2 mr-3 rounded-full"></div>
                       Find the ALBERT Token: Search for the ALBERT Token by its
@@ -430,7 +431,7 @@
                       website).<br />
                     </div>
                     <div
-                      class="text-white text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
+                      class="text-white text-sm sm:text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
                     >
                       <div class="bg-white h-2 w-2 mr-3 rounded-full"></div>
                       Swap for ALBERT: Swap your Arbitrum ETH (or another
@@ -448,6 +449,7 @@
                       height="33"
                       viewBox="0 0 32 33"
                       fill="none"
+                      class="duration-300"
                     >
                       <path
                         d="M10.6669 22.5773L10.6669 11.3506C10.6663 10.9074 10.7911 10.4731 11.0271 10.0979C11.2631 9.7227 11.6005 9.42201 12.0002 9.23063C12.4746 9.00658 13.0023 8.92029 13.5233 8.98158C14.0442 9.04287 14.5375 9.24928 14.9469 9.57729L21.7469 15.1906C22.0011 15.4109 22.2049 15.6833 22.3446 15.9892C22.4843 16.2952 22.5566 16.6276 22.5566 16.964C22.5566 17.3003 22.4843 17.6327 22.3446 17.9387C22.2049 18.2447 22.0011 18.517 21.7469 18.7373L14.9469 24.3506C14.5375 24.6786 14.0442 24.885 13.5233 24.9463C13.0023 25.0076 12.4746 24.9213 12.0002 24.6973C11.6005 24.5059 11.2631 24.2052 11.0271 23.83C10.7911 23.4548 10.6663 23.0205 10.6669 22.5773Z"
@@ -457,7 +459,7 @@
                   </div>
                   <div class="block__content">
                     <div
-                      class="text-white flex items-center text-md md:text-lg font-bold font-['Segoe UI'] leading-tight"
+                      class="text-white flex items-center text-sm sm:text-md md:text-lg font-bold font-['Segoe UI'] leading-tight"
                     >
                       <div class="bg-white h-2 w-2 mr-3 rounded-full"></div>
                       Visit the PinkSale Page: The official ALBERT Token project
@@ -465,14 +467,14 @@
                       page.<br />
                     </div>
                     <div
-                      class="text-white text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
+                      class="text-white text-sm sm:text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
                     >
                       <div class="bg-white h-2 w-2 mr-3 rounded-full"></div>
                       Connect Your Wallet Make sure your wallet (MetaMask, etc.)
                       is compatible with PinkSale's supported chains.<br />
                     </div>
                     <div
-                      class="text-white text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
+                      class="text-white text-sm sm:text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
                     >
                       <div class="bg-white h-2 w-2 mr-3 rounded-full"></div>
                       Contribute:  Select the cryptocurrency you want to
@@ -480,7 +482,7 @@
                       amount.<br />
                     </div>
                     <div
-                      class="text-white text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
+                      class="text-white text-sm sm:text-md md:text-lg font-bold font-['Segoe UI'] leading-tight flex items-center"
                     >
                       <div class="bg-white h-2 w-2 mr-3 rounded-full"></div>
                       Claim Your Tokens:  Once the presale ends, you'll be able
@@ -498,6 +500,7 @@
                       height="33"
                       viewBox="0 0 32 33"
                       fill="none"
+                      class="duration-300"
                     >
                       <path
                         d="M10.6669 22.5773L10.6669 11.3506C10.6663 10.9074 10.7911 10.4731 11.0271 10.0979C11.2631 9.7227 11.6005 9.42201 12.0002 9.23063C12.4746 9.00658 13.0023 8.92029 13.5233 8.98158C14.0442 9.04287 14.5375 9.24928 14.9469 9.57729L21.7469 15.1906C22.0011 15.4109 22.2049 15.6833 22.3446 15.9892C22.4843 16.2952 22.5566 16.6276 22.5566 16.964C22.5566 17.3003 22.4843 17.6327 22.3446 17.9387C22.2049 18.2447 22.0011 18.517 21.7469 18.7373L14.9469 24.3506C14.5375 24.6786 14.0442 24.885 13.5233 24.9463C13.0023 25.0076 12.4746 24.9213 12.0002 24.6973C11.6005 24.5059 11.2631 24.2052 11.0271 23.83C10.7911 23.4548 10.6663 23.0205 10.6669 22.5773Z"
