--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width,initial-scale=1" name="viewport" />
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
-    <title>France National Fan Token</title>
-    <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <title>Elbert</title>
+    <link
+      href="./assets/images/bear.png"
+      rel="shortcut icon"
+      type="image/x-icon"
+    />
     <link rel="preload" href="/assets/css/style.css" as="style" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <meta name="description" content="France National Fan Token" />
+    <meta name="description" content="Elbert" />
     <meta name="head:count" content="1" />
     <link
       rel="preload"
@@ -341,7 +345,7 @@
                   alt="Roadmap phase 1"
                   class="pointer-events-none w-full scale-150 object-contain sm:scale-100"
                   loading="lazy"
-                  src="/assets/images/phase-1.6d8ca76f.svg"
+                  src="/assets/images/phase-1.png"
                 />
               </div>
               <img
@@ -567,10 +571,6 @@
         </div>
       </footer>
     </div>
-    <script
-      data-cfasync="false"
-      src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
-    ></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver%2CIntersectionObserverEntry%2Cscreen.orientation"></script>
     <link rel="stylesheet" href="/assets/css/style.css" />
     <script
