--- a/index.html
+++ b/index.html
@@ -64,11 +64,7 @@
             </svg>
             <div class="hidden lg:block">
               <nav class="inline-flex items-center gap-10">
-                <a
-                  href="https://france-fan-token.gitbook.io/france-fan-token-white-paper"
-                  class="group relative"
-                  target="_blank"
-                >
+                <a href="#" class="group relative" target="_blank">
                   <span class="text-2xl font-medium uppercase"
                     >WHITE PAPER</span
                   >
@@ -76,21 +72,13 @@
                     class="absolute bottom-0.5 left-1/2 block h-px w-0 -translate-x-1/2 bg-white transition-all duration-200 group-hover:w-full"
                   ></span>
                 </a>
-                <a
-                  href="https://app.solidproof.io/projects/france-fan-token"
-                  class="group relative"
-                  target="_blank"
-                >
+                <a href="#" class="group relative" target="_blank">
                   <span class="text-2xl font-medium uppercase">AUDIT</span>
                   <span
                     class="absolute bottom-0.5 left-1/2 block h-px w-0 -translate-x-1/2 bg-white transition-all duration-200 group-hover:w-full"
                   ></span>
                 </a>
-                <a
-                  href="https://github.com/solidproof/projects/tree/main/FranceFanToken"
-                  class="group relative"
-                  target="_blank"
-                >
+                <a href="#" class="group relative" target="_blank">
                   <span class="text-2xl font-medium uppercase">KYC</span>
                   <span
                     class="absolute bottom-0.5 left-1/2 block h-px w-0 -translate-x-1/2 bg-white transition-all duration-200 group-hover:w-full"
@@ -531,7 +519,7 @@
               <li>
                 <a
                   class="inline-flex items-center bg-[#012133] p-1.5 text-white focus:outline-none"
-                  href="https://t.me/FRA_Channel"
+                  href="#"
                   target="_blank"
                 >
                   <svg
@@ -550,7 +538,7 @@
               <li>
                 <a
                   class="inline-flex items-center bg-[#012133] p-1.5 text-white focus:outline-none"
-                  href="https://twitter.com/FranceFanToken"
+                  href="#"
                   target="_blank"
                 >
                   <svg
