--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
                 <p
                   class="z-10 my-6 px-4 text-center text-4xl font-bold text-white sm:px-6 lg:hidden"
                 >
-                  Albert Euro 2024:  Where Fans Own the Game
+                  Albert Euro 2024: Where Fans Own the Game
                 </p>
                 <div
                   class="z-10 space-y-6 bg-black/50 p-4 text-white sm:p-6 lg:max-w-lg lg:bg-transparent lg:p-0"
                 >
                   <h1 class="hidden text-5xl font-bold lg:block">
-                    Albert Euro 2024:  Where Fans Own the Game
+                    Albert Euro 2024: Where Fans Own the Game
                   </h1>
                   <h2 class="text-center font-medium lg:text-left lg:text-lg">
                     Get ready to revolutionize your Euro 2024 experience! Albert
@@ -146,7 +146,9 @@
                       class="beveled-corners truncate px-4 py-2 text-center"
                       style="--color: #012133"
                     >
-                      <span class="font-small">CA</span>
+                      <span class="font-small"
+                        >0x8BDc0Dca39CdbcbdE54B1498D0bF22653D523355</span
+                      >
                     </p>
                   </div>
                   <div class="w-full flex justify-end">
@@ -282,9 +284,9 @@
                 src="./assets/images/bg-pitch.jpg"
               />
               <div class="absolute top-0 left-0 right-0">
-                <div class="w-1/2 mx-auto pt-8">
-                  <h2 class="text-center font-bold text-white sm:text-4xl">
-                    TAX
+                <div class="w-[58%] mx-auto pt-8">
+                  <h2 class="text-center font-bold text-white sm:text-5xl">
+                    TOKENOMICS
                   </h2>
                   <div class="flex mt-5 items-center justify-center">
                     <img
@@ -293,9 +295,15 @@
                       alt=""
                     />
                     <h2
-                      class="text-center sm:text-4xl font-bold w-1/2 text-white"
+                      class="text-start sm:text-3xl font-bold w-1/2 text-white"
                     >
-                      Tax: 0% Buy, 3% Sell
+                      <ul class="list-inside list-disc">
+                        <li class="mt-2">Total Supply: 2.400.000.000</li>
+                        <li class="mt-2">20% Community Rewards</li>
+                        <li class="mt-2">33% Listing & Liquidity</li>
+                        <li class="mt-2">27% Public sale</li>
+                        <li class="mt-2">20% Presale</li>
+                      </ul>
                     </h2>
                   </div>
                 </div>
